issue1292 - made asset tools collapsable

--- a/app/assets/sass/dri/dri.scss
+++ b/app/assets/sass/dri/dri.scss
@@ -2769,7 +2769,7 @@ ul.dri_view_collection {
   
   //margin: 20px 0 0 0;
   //padding: 0;
-  width: 230px;
+  width: 100%;
   //color: $dri_grey;
   display: block;
   float: left;
